# rust-rpi-rgb-led-matrix

./: Cargo.toml  build.rs
src/: c.rs  lib.rs
