[package]
name = "rpi-led-matrix"
description = "Bindings for Hzeller RPi-RGB-Led-Matrix"
version = "0.1.1"
authors = ["Vincent Pasquier <vincentpasquier@posteo.net>"]
repository = "https://github.com/helvethor/rust-rpi-rgb-led-matrix"
homepage = "https://github.com/helvethor/rust-rpi-rgb-led-matrix"
build = "build.rs"
license = "GPL-3.0"
readme = "README.md"

[build-dependencies]
cc = "1.0"

[dependencies]
embedded-graphics={git="https://github.com/evq/embedded-graphics.git", branch="fix_bmp_stride", features=["bmp"]}
libc = "0.2"
